--- a/bootstrap-grid/sass/bootstrap/_variables.scss
+++ b/bootstrap-grid/sass/bootstrap/_variables.scss
@@ -1,14 +1,12 @@
 // Variables
 // REQUIRE _config.scss vars to work
 
-$screen-sizes:"xs", "sm", "md", "lg"; //Named for helper screensize function in _screensize-helper
-$screen-min: $xs, $sm, $md, $lg; // Min widths for screen sizes
-$screen-max: $max-width-xs, $max-width-sm, $max-width-md, $max-width-lg; // Max widths for screen sizes
+
 //## Define the breakpoints at which your layout will change, adapting to different screen sizes.
 
 // Extra small screen / phone
 //** Deprecated `$screen-xs` as of v3.0.1
-$screen-xs:                  $xs !default;
+$screen-xs:                  $break-xs !default;
 //** Deprecated `$screen-xs-min` as of v3.2.0
 $screen-xs-min:              $screen-xs !default;
 //** Deprecated `$screen-phone` as of v3.0.1
@@ -16,21 +14,21 @@ $screen-phone:               $screen-xs-min !default;
 
 // Small screen / tablet
 //** Deprecated `$screen-sm` as of v3.0.1
-$screen-sm:                  $sm !default;
+$screen-sm:                  $break-sm !default;
 $screen-sm-min:              $screen-sm !default;
 //** Deprecated `$screen-tablet` as of v3.0.1
 $screen-tablet:              $screen-sm-min !default;
 
 // Medium screen / desktop
 //** Deprecated `$screen-md` as of v3.0.1
-$screen-md:                  $md !default;
+$screen-md:                  $break-md !default;
 $screen-md-min:              $screen-md !default;
 //** Deprecated `$screen-desktop` as of v3.0.1
 $screen-desktop:             $screen-md-min !default;
 
 // Large screen / wide desktop
 //** Deprecated `$screen-lg` as of v3.0.1
-$screen-lg:                  $lg !default;
+$screen-lg:                  $break-lg !default;
 $screen-lg-min:              $screen-lg !default;
 //** Deprecated `$screen-lg-desktop` as of v3.0.1
 $screen-lg-desktop:          $screen-lg-min !default;
@@ -40,32 +38,28 @@ $screen-xs-max:              ($screen-sm-min - 1) !default;
 $screen-sm-max:              ($screen-md-min - 1) !default;
 $screen-md-max:              ($screen-lg-min - 1) !default;
 
-
-//== Grid system
-//
-//## Define your custom responsive grid.
-
-//** Number of columns in the grid.
-$grid-columns:              $number_of_columns !default;
-//** Padding between columns. Gets divided in half for the left and right.
-$grid-gutter-width:         $gutter-width !default;
-
-
+// Helper mixin for screensizes
+$screen-sizes:"xs", "sm", "md", "lg", "xl"; //Named for helper screensize function in _screensize-helper
+$screen-min: 0, $break-xs+1, $break-sm +1, $break-md +1, $break-lg +1; // Min widths for screen sizes
+$screen-max: $break-xs, $break-sm, $break-md, $break-lg, 9999px; // Max widths for screen sizes
 //== Container sizes
 //
 //## Define the maximum width of `.container` for different screen sizes.
 
+// Gutter with percentage
+$max-width: $break-lg + 1;
+$grid-gutter-width-percentage: percentage(($grid-gutter-width/2)/$max-width);
 // Small screen / tablet
-$container-tablet:             ($max-width-sm + $grid-gutter-width) !default;
+$container-tablet:             ($max-width-sm + $grid-gutter-width-percentage) !default;
 //** For `$screen-sm-min` and up.
 $container-sm:                 $container-tablet !default;
 
 // Medium screen / desktop
-$container-desktop:            ($max-width-md + $grid-gutter-width) !default;
+$container-desktop:            ($max-width-md + $grid-gutter-width-percentage) !default;
 //** For `$screen-md-min` and up.
 $container-md:                 $container-desktop !default;
 
 // Large screen / wide desktop
-$container-large-desktop:      ($max-width-lg + $grid-gutter-width) !default;
+$container-large-desktop:      ($max-width-lg + $grid-gutter-width-percentage) !default;
 //** For `$screen-lg-min` and up.
 $container-lg:                 $container-large-desktop !default;
